Support extensible converter classes for PojoMapper and JsonGenerator
* Add support for JDK classes URI, URL and InetAddress as these are common formats in OpenAPI